[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/Themes/general_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Icons/save.png" type="Texture" id=2]
[ext_resource path="res://UI/title_screen/title_screen.gd" type="Script" id=3]
[ext_resource path="res://UI/Icons/play.png" type="Texture" id=4]
[ext_resource path="res://UI/Icons/exit.png" type="Texture" id=5]
[ext_resource path="res://UI/title_screen/Verdant PLedge Logo.png" type="Texture" id=6]
[ext_resource path="res://UI/Icons/gear.png" type="Texture" id=7]
[ext_resource path="res://UI/options/options.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/smart_ui_nodes/smart_button/smart_button.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/title_screen/title_screen.mp3" type="AudioStream" id=10]
[ext_resource path="res://UI/Themes/Fonts/m6x11.tres" type="DynamicFont" id=11]
[ext_resource path="res://UI/Themes/Styles/stylebox_box.tres" type="StyleBox" id=12]

[node name="title_screen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.44546
margin_right = -1.44547
rect_pivot_offset = Vector2( 46.4455, 115 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )

[node name="main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="main"]
anchor_bottom = 0.202
margin_left = 107.445
margin_top = 128.0
margin_right = 287.445
margin_bottom = 168.0
alignment = 1

[node name="play" parent="main/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 23.0
margin_right = 59.0
margin_bottom = 83.0
focus_neighbour_top = NodePath("../quit")
custom_constants/hseparation = -15
custom_fonts/font = ExtResource( 11 )
shortcut_in_tooltip = false
text = "play"
icon = ExtResource( 4 )
flat = true
expand_icon = true
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="options" parent="main/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 63.0
margin_right = 118.0
margin_bottom = 83.0
custom_constants/hseparation = -15
custom_fonts/font = ExtResource( 11 )
shortcut_in_tooltip = false
text = "options"
icon = ExtResource( 7 )
flat = true
expand_icon = true
selected_color = Color( 0.768627, 0.721569, 0.239216, 1 )

[node name="quit" parent="main/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 122.0
margin_right = 156.0
margin_bottom = 83.0
focus_neighbour_bottom = NodePath("../play")
custom_constants/hseparation = -17
custom_fonts/font = ExtResource( 11 )
shortcut_in_tooltip = false
text = "quit"
icon = ExtResource( 5 )
flat = true
expand_icon = true
selected_color = Color( 0.768627, 0.239216, 0.239216, 1 )

[node name="Copyright" type="Label" parent="main"]
margin_left = -22.5545
margin_top = 200.0
margin_right = 239.445
margin_bottom = 218.0
rect_scale = Vector2( 0.48, 0.48 )
theme = ExtResource( 1 )
text = "Â© Wadid Productions"
align = 1
valign = 2

[node name="icon" type="TextureRect" parent="main"]
margin_left = 58.445
margin_top = 21.0
margin_right = 320.445
margin_bottom = 123.0
size_flags_horizontal = 5
size_flags_vertical = 0
texture = ExtResource( 6 )
stretch_mode = 6

[node name="HSeparator" type="HSeparator" parent="main"]
margin_left = 58.445
margin_top = 141.0
margin_right = 320.445
margin_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1, 0.351 )
size_flags_vertical = 4
custom_styles/separator = ExtResource( 12 )

[node name="center" type="VBoxContainer" parent="main"]
anchor_left = 0.413
anchor_right = 0.596
anchor_bottom = 1.0
margin_left = -100.147
margin_top = -33.0
margin_right = 91.8535
margin_bottom = -33.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource( 1 )
alignment = 1

[node name="ver" type="Label" parent="main"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -62.5545
margin_top = -16.0
margin_right = 55.4455
margin_bottom = 2.0
grow_horizontal = 0
rect_scale = Vector2( 0.48, 0.48 )
theme = ExtResource( 1 )
text = "v_._._"
align = 2
valign = 1

[node name="msg" type="Label" parent="main"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 3.44546
margin_top = -8.00002
margin_right = 51.4455
margin_bottom = 7.99998
rect_scale = Vector2( 0.48, 0.48 )
theme = ExtResource( 1 )
text = "idk lol"
valign = 2

[node name="saves" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 10.0
margin_right = -5.0
margin_bottom = -10.0
theme = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="saves"]
margin_right = 374.0
margin_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="no_saves" type="Label" parent="saves/ScrollContainer"]
visible = false
margin_right = 374.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "no saves found, create a new save."
align = 1
valign = 1

[node name="saves_list" type="GridContainer" parent="saves/ScrollContainer"]
margin_bottom = 168.0
size_flags_vertical = 3
custom_constants/vseparation = 3
custom_constants/hseparation = 3
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="saves"]
margin_top = 172.0
margin_right = 374.0
margin_bottom = 196.0

[node name="back" parent="saves/HBoxContainer" instance=ExtResource( 9 )]
margin_right = 66.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("../new")
focus_neighbour_right = NodePath("../new")
text = "back"
icon = ExtResource( 5 )
flat = true
align = 0
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="space" type="Control" parent="saves/HBoxContainer"]
margin_left = 70.0
margin_right = 223.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new" parent="saves/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 227.0
margin_right = 374.0
margin_bottom = 24.0
focus_neighbour_left = NodePath("../back")
focus_neighbour_right = NodePath("../back")
text = "create new save"
flat = true
align = 2
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="new_save" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="new_save"]
visible = false
anchor_right = 1.0
margin_bottom = 48.0

[node name="HBoxContainer" type="HBoxContainer" parent="new_save/VBoxContainer"]
margin_right = 344.0
margin_bottom = 22.0

[node name="name_label" type="Label" parent="new_save/VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 45.0
margin_bottom = 20.0
text = "name:"

[node name="name" type="LineEdit" parent="new_save/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 344.0
margin_bottom = 22.4988
size_flags_horizontal = 3
custom_constants/minimum_spaces = 0
max_length = 40
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
placeholder_text = "untitled_save"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer_2" type="HBoxContainer" parent="new_save/VBoxContainer"]
margin_top = 26.0
margin_right = 344.0
margin_bottom = 50.0

[node name="icon_label" type="Label" parent="new_save/VBoxContainer/HBoxContainer_2"]
margin_top = 3.0
margin_right = 45.0
margin_bottom = 21.0
text = "icon:"

[node name="prev" parent="new_save/VBoxContainer/HBoxContainer_2" instance=ExtResource( 9 )]
margin_left = 49.0
margin_right = 124.0
margin_bottom = 24.0
text = "<< prev"
flat = true
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="icon" type="TextureRect" parent="new_save/VBoxContainer/HBoxContainer_2"]
margin_left = 128.0
margin_right = 144.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 5

[node name="next" parent="new_save/VBoxContainer/HBoxContainer_2" instance=ExtResource( 9 )]
margin_left = 148.0
margin_right = 223.0
margin_bottom = 24.0
text = "next >>"
flat = true
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="create" parent="new_save" instance=ExtResource( 9 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -117.0
margin_top = -22.0
margin_right = 0.0
margin_bottom = 0.0
focus_neighbour_left = NodePath("../cancel")
focus_neighbour_right = NodePath("../cancel")
text = "create"
flat = true
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="cancel" parent="new_save" instance=ExtResource( 9 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -22.0
margin_right = 50.0
margin_bottom = 0.0
focus_neighbour_left = NodePath("../create")
focus_neighbour_right = NodePath("../create")
text = "cancel"
flat = true
selected_color = Color( 0.301961, 0.768627, 0.239216, 1 )

[node name="Options" parent="." instance=ExtResource( 8 )]
visible = false

[node name="tabs" parent="Options" index="0"]
theme = ExtResource( 1 )

[node name="VBox" parent="Options/tabs/video" index="0"]
margin_right = 352.0

[node name="VBox" parent="Options/tabs/game" index="0"]
margin_bottom = 306.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -25.0
autoplay = true

[connection signal="pressed" from="main/HBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="main/HBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="main/HBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="saves/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="saves/HBoxContainer/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="new_save/VBoxContainer/HBoxContainer_2/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="new_save/VBoxContainer/HBoxContainer_2/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="new_save/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="new_save/cancel" to="." method="_on_cancel_pressed"]
[connection signal="closed" from="Options" to="." method="_on_Options_closed"]
[connection signal="visibility_changed" from="Options" to="." method="_on_Options_visibility_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Options"]
